# metabuilder

./: .actrc  .env.example  .gitignore  .npmrc  .secrets.example  .spark-initial-sha  ACT_INTEGRATION_ASSESSMENT.md  AGENTS.md  ANALYSIS_INDEX.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ATOMIC_DESIGN.md  ATTACHMENT_HANDLER_PHASE_6_SUMMARY.md  AUDIT_LOG_ANALYSIS.md  AUDIT_LOG_QUICK_REFERENCE.md  BLOB_STORAGE_IMPLEMENTATION.md  CI_FIX_COMPLETE.md  CLAUDE.md  COMPLETE_ITERATION_25.md  COMPONENT_MAP.md  CONSOLIDATION_SUMMARY.md  CONTRACT.md  CONTRIBUTING.md  CROSS_PLATFORM_BUILD.md  DASHBOARD_IMPLEMENTATION_ANALYSIS.md  DASHBOARD_WORKFLOW_DELIVERY_SUMMARY.txt  DATA_DRIVEN_ARCHITECTURE.md  DBAL_BUILD_ISSUES.md  DBAL_INTEGRATION.md  DBAL_QUICK_REFERENCE.md  DB_MIGRATION_PLAN.md  DECLARATIVE_TESTING_ARCHITECTURE.md  DEPENDENCY_CLEANUP.md  DEPENDENCY_UPDATE_SUMMARY.md  DOCS_ORGANIZATION_COMPLETE.md  DOCS_ORGANIZATION_GUIDE.md  DOCUMENTATION_INDEX.md  ENCRYPTION_PHASE_6_SUMMARY.md  EXECUTION_TRACKER.md  EXECUTIVE_BRIEF.md  (+104 more)
dbal/cpp/: CMakeLists.txt  CVE_ANALYSIS.md  CVE_COMPARISON_SUMMARY.md  Dockerfile  IMPLEMENTATION_STATUS.md  PHASE3_DAEMON.md  README.Docker.md  README.Linting.md  README.md  SECURITY_TESTING.md  conanfile.txt
frontends/cli/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  package.json  tsconfig.json
gameengine/: .gitignore  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json  README.md  ROADMAP.md  codex-skill.yaml  conanfile.py  debug_shader.cpp  renovate.json
gameengine/docs/: CONFIG_SELECTOR.md  CRASH_ANALYSIS.md  FIXES_IMPLEMENTED.md  INITIALIZATION_ORDER_BUG.md  MACRO_POLICY.md  N8N_GAMEENGINE_ASSETS_AUDIT.md  N8N_WORKFLOWS.md  NEW_DESIGN.md  PROMPT.md  SCENE_FRAMEWORK.md  SHADER_VALIDATION.md  TDD_TEST_SUITE.md  VULKAN_SHADER_LINKING_PROBLEM.md
gameengine/python/: convert_mod_to_ogg.py  dev_commands.py  generate_audio_assets.py  generate_cube_stl.py  package_lint.py
gameengine/src/: main.cpp
gameengine/tests/: bgfx_backend_frame_guard_test.cpp  bgfx_draw_bounds_crash_test.cpp  bgfx_draw_bounds_validation_test.cpp  bgfx_draw_integration_test.cpp  bgfx_frame_requirement_test.cpp  bgfx_gui_budget_enforcement_test.cpp  bgfx_initialization_order_integration_test.cpp  bgfx_initialization_order_test.cpp  bgfx_texture_budget_tracker_test.cpp  bgfx_texture_loading_test.cpp  config_compiler_reference_validation_test.cpp  crash_recovery_timeout_test.cpp  graphics_service_buffer_lifecycle_test.cpp  gui_shader_linking_failure_test.cpp  json_config_merge_test.cpp  json_config_schema_validation_test.cpp  materialx_shader_generator_integration_test.cpp  rebuild_and_test.sh  render_coordinator_init_order_test.cpp  render_graph_service_test.cpp  shader_pipeline_validator_test.cpp  shader_system_registry_test.cpp  shader_uniform_type_integration_test.cpp  shaderc_uniform_mapping_test.cpp  test_bgfx_gui_service.cpp  test_gxm_backend.cpp  test_validation.sh  test_vulkan_shader_linking.cpp  vulkan_crash_reproduction_test.cpp  workflow_definition_parser_test.cpp
typthon/: .gitignore  CMakeLists.txt  IMPLEMENTATION_IDEAS.md  PR_SUMMARY.md  README.rst  RENAMING_GUIDE.md  STRICT_TYPING.md  STUBS.md  conanfile.txt
typthon/.github/: CONTRIBUTING.rst  SECURITY.md
typthon/Grammar/: Tokens
typthon/Include/: Python.h  README.rst  abstract.h  audit.h  bltinmodule.h  boolobject.h  bytearrayobject.h  bytesobject.h  ceval.h  codecs.h  compile.h  complexobject.h  critical_section.h  datetime.h  descrobject.h  dictobject.h  dynamic_annotations.h  enumobject.h  errcode.h  exports.h  fileobject.h  fileutils.h  floatobject.h  frameobject.h  genericaliasobject.h  import.h  intrcheck.h  iterobject.h  listobject.h  lock.h  longobject.h  marshal.h  memoryobject.h  methodobject.h  modsupport.h  moduleobject.h  monitoring.h  object.h  objimpl.h  opcode.h  (+38 more)
typthon/Lib/: _collections_abc.py  _pydecimal.py  copyreg.py  functools.py  optparse.py  platform.py  pydoc.py  subprocess.py  textwrap.py  threading.py  webbrowser.py
typthon/Mac/: README.rst
typthon/Misc/: python-embed.pc.in  python.man  python.pc.in
typthon/Modules/: _abc.c  _asynciomodule.c  _bisectmodule.c  _bz2module.c  _codecsmodule.c  _collectionsmodule.c  _csv.c  _curses_panel.c  _cursesmodule.c  _datetimemodule.c  _dbmmodule.c  _elementtree.c  _functoolsmodule.c  _gdbmmodule.c  _hashopenssl.c  _heapqmodule.c  _interpchannelsmodule.c  _interpqueuesmodule.c  _interpreters_common.h  _interpretersmodule.c  _json.c  _localemodule.c  _lsprof.c  _lzmamodule.c  _math.h  _opcode.c  _operator.c  _pickle.c  _posixsubprocess.c  _queuemodule.c  _randommodule.c  _remote_debugging_module.c  _scproxy.c  _ssl.c  _ssl.h  _stat.c  _statisticsmodule.c  _struct.c  _suggestions.c  _sysconfig.c  (+67 more)
typthon/Objects/: abstract.c  boolobject.c  bytearrayobject.c  bytes_methods.c  bytesobject.c  call.c  capsule.c  cellobject.c  classobject.c  codeobject.c  complexobject.c  descrobject.c  dictobject.c  enumobject.c  exceptions.c  fileobject.c  floatobject.c  frameobject.c  funcobject.c  genericaliasobject.c  genobject.c  interpolationobject.c  iterobject.c  listobject.c  longobject.c  memoryobject.c  methodobject.c  moduleobject.c  namespaceobject.c  object.c  obmalloc.c  odictobject.c  picklebufobject.c  rangeobject.c  setobject.c  sliceobject.c  structseq.c  templateobject.c  tupleobject.c  typeobject.c  (+8 more)
typthon/PC/: WinMain.c  _testconsole.c  config.c  config_minimal.c  dl_nt.c  frozen_dllmain.c  invalid_parameter_handler.c  msvcrtmodule.c  pyconfig.h  python3dll.c  python_ver_rc.h  winreg.c  winsound.c
typthon/Parser/: Python.asdl  action_helpers.c  asdl_c.py  myreadline.c  parser.c  peg_api.c  pegen.c  pegen.h  pegen_errors.c  string_parser.c  string_parser.h  token.c
typthon/Programs/: _bootstrap_python.c  _freeze_module.c  _freeze_module.py  _testembed.c  python.c  test_frozenmain.py
typthon/Python/: Python-ast.c  Python-tokenize.c  README  _contextvars.c  _warnings.c  asdl.c  assemble.c  ast.c  ast_preprocess.c  ast_unparse.c  bltinmodule.c  bootstrap_hash.c  brc.c  bytecodes.c  ceval.c  ceval_gil.c  ceval_macros.h  codecs.c  (+92 more)
(+8190 files in other folders)
